# trabalho-1-mairagomesm

./: CMakeLists.txt  Makefile  README.md  ]]  autor.md  keno  main.cpp
include/: KenoBet.h  definitions.h  func.h  io.h
src/: KenoBet.cpp  func.cpp  io.cpp  main.cpp  oldmain.cpp
